--- a/core/static/css/base.css
+++ b/core/static/css/base.css
@@ -31,6 +31,8 @@ footer {
     clear: both;
 }
 
+
+
 .logo img {
     width: 5vh;
 }
@@ -40,15 +42,29 @@ footer {
     position: relative;
 }
 
+nav {
+    display: flex; /* Use flexbox for the nav */ /* Align items to the right */
+    width: 100%; /* Ensure nav takes full width */
+}
+
 nav ul {
-    display: flex; /* Use flexbox for layout */
-    list-style-type: none; /* Remove bullet points */
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margin */
+    display: flex;
+    flex: 1;
+    width: 100%;
+    justify-content: left;
+    text-align: center;
+    list-style: none;
+    margin: 0;
 }
 
 nav ul li {
-    margin-right: 20px; /* Space between items */
+    margin-right: 20px;
+    align-content: center; /* Space between items */
+}
+
+.logout-container {
+    justify-content: right;
+    margin-left: auto; /* Push the logout button to the right */
 }
 
 nav ul li a {
@@ -88,10 +104,7 @@ nav ul li a:hover {
     justify-content: center;
     align-items: center;
     height: 40vh; /* Centrar verticalmente */
-    /* overflow-y: auto; /* Add this to enable vertical scrolling */
     max-width: 100%; /* Add this to prevent horizontal overflow */
-    /*box-sizing: border-box; /* Add this to include padding and border in width calculation */
-    /*overflow-x: auto;
 }
 
 /* login card */
@@ -101,7 +114,6 @@ nav ul li a:hover {
     justify-content: center;
     align-items: center;
     height: 100%; /* Centrar verticalmente */
-    /*overflow-y: auto;  /*Add this to enable vertical scrolling */
     max-width: 100%; /* Add this to prevent horizontal overflow */
     box-sizing: border-box; /* Add this to include padding and border in width calculation */
 
