--- a/core/templates/prestamos/prestamos.html
+++ b/core/templates/prestamos/prestamos.html
@@ -6,7 +6,7 @@
         <h2>Préstamos Sin Pagar</h2>
         <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
             <div></div>
-        <input type="text" id="searchInput" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
+        <input type="text" id="searchInputSinPagar" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
         </div>
         <table class="table table-bordered">
             <thead>
@@ -18,7 +18,7 @@
                     <th class="th sort-both">Tasa de Interés</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="sinpagarTableBody">
                 {% for prestamo in prestamos_sin_pagar %}
                 <tr>
                     <td>{{ prestamo.id }}</td>
@@ -57,7 +57,7 @@
         <h2>Préstamos Pagados</h2>
         <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
             <div></div>
-        <input type="text" id="searchInput" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
+        <input type="text" id="searchInputPagados" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
         </div>
         <table class="table table-bordered">
             <thead>
@@ -71,7 +71,7 @@
                     <th class="th sort-both">Tasa de Interés</th>
                 </tr>
             </thead>
-            <tbody id="prestamosTableBody">
+            <tbody id="pagadosTableBody">
                 {% for prestamo in prestamos_pagados %}
                 <tr>
                     <td>{{ prestamo.id }}</td>
@@ -84,7 +84,7 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="5" class="text-center">No hay préstamos sin pagar.</td>
+                    <td colspan="7" class="text-center">No hay préstamos pagados.</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -199,8 +199,8 @@ document.addEventListener('DOMContentLoaded', () => {
 
 // campo de busqueda
 document.addEventListener('DOMContentLoaded', () => {
-    const searchInput = document.getElementById('searchInput');
-    const tableBody = document.getElementById('prestamosTableBody');
+    const searchInput = document.getElementById('searchInputPagados');
+    const tableBody = document.getElementById('pagadosTableBody');
 
     searchInput.addEventListener('input', function() {
         const filter = searchInput.value.toLowerCase();
@@ -229,7 +229,37 @@ document.addEventListener('DOMContentLoaded', () => {
         }
     });
 });
+document.addEventListener('DOMContentLoaded', () => {
+    const searchInput = document.getElementById('searchInputSinPagar');
+    const tableBody = document.getElementById('sinpagarTableBody');
 
+    searchInput.addEventListener('input', function() {
+        const filter = searchInput.value.toLowerCase();
+        const rows = tableBody.getElementsByTagName('tr');
+
+        for (let i = 0; i < rows.length; i++) {
+            const cells = rows[i].getElementsByTagName('td');
+            let found = false;
+
+            for (let j = 0; j < cells.length; j++) {
+                const cell = cells[j];
+                if (cell) {
+                    const textValue = cell.textContent || cell.innerText;
+                    if (textValue.toLowerCase().indexOf(filter) > -1) {
+                        found = true;
+                        break;
+                    }
+                }
+            }
+
+            if (found) {
+                rows[i].style.display = ""; // Muestra la fila
+            } else {
+                rows[i].style.display = "none"; // Oculta la fila
+            }
+        }
+    });
+});
 </script>
 
 {% endblock content %}
