--- a/core/templates/clientes/clientes.html
+++ b/core/templates/clientes/clientes.html
@@ -2,6 +2,44 @@
 {% load static %}
 {% block content %}
 <div class="container">
-    
+    <div class="main-container">
+        <div class="left-column">
+            <div class="card-left">
+                <h5>Información Básica</h5>
+                <p>Tipo de persona: {{ clientes.tipo_persona }}</p>
+                <p>Nombre: {{ cliente.1.nombre }}</p>
+                <p>Apellido: {{ cliente.1.apellido }}</p>
+                <p>Genero: {{ cliente.1.nombre }}</p>
+                <p>Fecha de Nacimiento: {{ cliente.1.fecha_nacimiento }}</p>
+            </div>
+            <div class="card-left">
+                <h5>Información Adicional</h5>
+                <p>Modificado Por: </p>
+                <p>Ultimo pago: </p>
+                <p>Prestamos activos: </p>
+                <p>Prestamos pagados: </p>
+            </div>
+        </div>
+        <div class="right-column">
+            <div class="card-right">
+                <h5>Direcciones</h5>
+                <p>Direccion 1: {{ cliente.1.direccion_1 }}</p>
+                <p>Direccion 2: {{ cliente.1.direccion_2 }}</p>
+
+            </div>
+            <div class="card-right">
+                <h5>Documento de Identidad</h5>
+                <p>Cedula de identidad: {{ cliente.1.cedula }}</p>
+                <p>RIF: {{ cliente.1.rif }}</p>
+            </div>
+            <div class="card-right">
+                <h5>Información de Contacto</h5>
+                <p>Correo 1: {{ cliente.1.email_1 }}</p>
+                <p>Correo 2: {{ cliente.1.email_2 }}</p>
+                <p>Numero de telefono: {{ cliente.1.numero_telefono }}</p>
+                <p>Numero local: {{ cliente.1.numero_local }}</p>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
