--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Almacen de Compras</title>
+    <title>Mar-Eri prestamos</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link  rel="stylesheet" type="text/css" href="https://bootswatch.com/5/zephyr/bootstrap.min.css"/>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
