--- a/core/templates/prestamos/prestamos.html
+++ b/core/templates/prestamos/prestamos.html
@@ -36,7 +36,7 @@
         </table>
     </div>
 </div>
-<div class="container">
+<div class="container-graficos">
     <div class="graph-container">
         <h2>Préstamos Pagados por Día</h2>
         <div id="myGraph" style="width: 500px; height: 250px; background-color: #f2f2f2;">
@@ -44,14 +44,13 @@
         </div>
     </div>
 
-    <div class="graph-container_monto">
+    <div class="graph-container">
         <h2>Montos Pagados por Día</h2>
         <div id="myGraph" style="width: 500px; height: 250px; background-color: #f2f2f2;">
             <canvas id="montosPorDia" width="400" height="200"></canvas>
         </div>
     </div>
 </div>
-
 <div class="table-container">
     <div class="prestamos_pagados">
         <h2>Préstamos Pagados</h2>
