--- a/core/templates/clientes/clientes.html
+++ b/core/templates/clientes/clientes.html
@@ -2,91 +2,44 @@
 {% load static %}
 {% block content %}
 <div class="container">
-    <div class="main-container">
-        <!-- Tarjeta de Información General -->
-        <div class="card-general">
-            <h5>Información General</h5>
-            <div class="card-general-info"> 
-                <div>
-                    <p>Prestamos Activos: {{ clientes.prestamos_activos }}</p>
-                    <p>Prestamos Pagados: {{ clientes.prestamos_pagados }}</p>
-                </div>
-                <div>
-                    <p>Balance General: {{ clientes.balance_general }}</p>
-                    <p>Balance Prestado: {{ clientes.balance_prestado }}</p>
-                </div>
+    <div class="detalles-container">
+        <div class="left-column">
+            <div class="card-left">
+                <h5>Información Básica</h5>
+                <p>Tipo de persona: {{ clientes.tipo_persona }}</p>
+                <p>Nombre: {{ clientes.nombre }}</p>
+                <p>Apellido: {{ clientes.apellido }}</p>
+                <p>Genero: {{ clientes.nombre }}</p>
+                <p>Fecha de Nacimiento: {{ clientes.fecha_nacimiento }}</p>
+            </div>
+            <div class="card-left">
+                <h5>Información Adicional</h5>
+                <p>Modificado Por: </p>
+                <p>Ultimo pago: </p>
+                <p>Prestamos activos: </p>
+                <p>Prestamos pagados: </p>
             </div>
         </div>
+        <div class="right-column">
+            <div class="card-right">
+                <h5>Direcciones</h5>
+                <p>Direccion 1: {{ clientes.direccion_1 }}</p>
+                <p>Direccion 2: {{ clientes.direccion_2 }}</p>
 
-        <div class="row">
-            <!-- Tarjeta de Transacciones -->
-            <div class="card-transacciones col">
-                <h5>Transacciones</h5>
-                <p>Aquí se mostrarán los movimientos bancarios para préstamos y los pagos de los clientes.</p>
-                <!-- Aquí puedes incluir un componente o tabla para mostrar las transacciones -->
             </div>
-
-            <!-- Tarjeta de Total Pagado -->
-            <div class="card-total-pagado col">
-                <h5>Total Pagado</h5>
-                <p>Seleccione un cliente:</p>
-                <select id="cliente-select">
-                    <!-- Aquí se llenará con los clientes disponibles -->
-                    {% for cliente in clientes_lista %}
-                        <option value="{{ cliente.id }}">{{ cliente.nombre }}</option>
-                    {% endfor %}
-                </select>
-                <div id="grafico-total-pagado">
-                    <!-- Aquí se mostrará el gráfico en círculo -->
-                </div>
+            <div class="card-right">
+                <h5>Documento de Identidad</h5>
+                <p>Cedula de identidad: {{ clientes.cedula }}</p>
+                <p>RIF: {{ clientes.rif }}</p>
             </div>
-
-            <!-- Tarjeta de Pagos Totales -->
-            <div class="card-pagos-totales col">
-                <h5>Pagos Totales</h5>
-                <div id="grafico-pagos-totales">
-                    <!-- Aquí se mostrará el gráfico en círculo con el monto total de todos los préstamos activos -->
-                </div>
+            <div class="card-right">
+                <h5>Información de Contacto</h5>
+                <p>Correo 1: {{ clientes.email_1 }}</p>
+                <p>Correo 2: {{ clientes.email_2 }}</p>
+                <p>Numero de telefono: {{ clientes.numero_telefono }}</p>
+                <p>Numero local: {{ clientes.numero_local }}</p>
             </div>
         </div>
-    </div>
-</div>
-<div class="table-container">
-    <div class="prestamos_pagados">
-        <h2>Clientes</h2>
-        <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
-            <div></div>
-        <input type="text" id="searchInputPagados" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
-        </div>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th class="th sort-both">ID</th>
-                    <th class="th sort-both">Nombre</th>
-                    <th class="th sort-both">Apellido</th>
-                    <th class="th sort-both">Cedula</th>
-                    <th class="th sort-both">Prestamos activos</th>
-                    <th class="th sort-both">Prestamos pagados</th>
-                    <th class="th sort-both">Balance</th>
-                </tr>
-            </thead>
-            <tbody id="pagadosTableBody">
-                {% for clientes in clientes %}
-                <tr>
-                    <td>{{ cliente.id }}</td>
-                    <td>{{ cliente.nombre }} {{ cliente.apellido }}</td>
-                    <td>{{ cliente.cedula }}</td>
-                    <td>{{ cliente.prestamos_activos }}</td>
-                    <td>{{ cliente.prestamos_pagados }}</td>
-                    <td>${{ cliente.balance }}</td>
-                </tr>
-                {% empty %}
-                <tr>
-                    <td colspan="7" class="text-center">No hay clientes registrados.</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
     </div>
 </div>
 {% endblock content %}
