cliente balance total

--- a/core/templates/clientes/clientes_detalles.html
+++ b/core/templates/clientes/clientes_detalles.html
@@ -17,7 +17,7 @@
                 </div>
                 <div>
                     <p>Balance General: {{ cliente.balance }}</p>
-                    <p>Balance Prestado: {{ clientes.balance_prestado }}</p>
+                    <p>Balance Prestado: {{ cliente.total_prestamos }}</p>
                 </div>
             </div>
         </div>
