cliente-detalles informacion general

--- a/core/templates/clientes/clientes_detalles.html
+++ b/core/templates/clientes/clientes_detalles.html
@@ -16,8 +16,8 @@
                     <p>Prestamos Pagados: {{ prestamos_pagados }}</p>
                 </div>
                 <div>
-                    <p>Balance General: {{ cliente.balance }}</p>
-                    <p>Balance Prestado: {{ cliente.total_prestamos }}</p>
+                    <p>Balance General: {{ balance }}</p>
+                    <p>Balance Prestado: {{ balance_total }}</p>
                 </div>
             </div>
         </div>
