--- a/core/templates/clientes/clientes.html
+++ b/core/templates/clientes/clientes.html
@@ -14,30 +14,30 @@
             </div>
             <div class="card-left">
                 <h5>Información Adicional</h5>
-                <p>Modificado Por: </p>
+                <p>Modificado Por: {{ cliente.ultimo_usuario_modificacion.username }}</p>
                 <p>Ultimo pago: </p>
-                <p>Prestamos activos: </p>
-                <p>Prestamos pagados: </p>
+                <p>Prestamos activos: {{ prestamos_activos }}</p>
+                <p>Prestamos pagados: {{ prestamos_pagados }}</p>
             </div>
         </div>
         <div class="right-column">
             <div class="card-right">
                 <h5>Direcciones</h5>
-                <p>Direccion 1: {{ clientes.direccion_1 }}</p>
-                <p>Direccion 2: {{ clientes.direccion_2 }}</p>
+                <p>Direccion 1: {{ cliente.direccion_1 }}</p>
+                <p>Direccion 2: {{ cliente.direccion_2 }}</p>
 
             </div>
             <div class="card-right">
                 <h5>Documento de Identidad</h5>
-                <p>Cedula de identidad: {{ clientes.cedula }}</p>
-                <p>RIF: {{ clientes.rif }}</p>
+                <p>Cedula de identidad: {{ cliente.cedula }}</p>
+                <p>RIF: {{ cliente.rif }}</p>
             </div>
             <div class="card-right">
                 <h5>Información de Contacto</h5>
-                <p>Correo 1: {{ clientes.email_1 }}</p>
-                <p>Correo 2: {{ clientes.email_2 }}</p>
-                <p>Numero de telefono: {{ clientes.numero_telefono }}</p>
-                <p>Numero local: {{ clientes.numero_local }}</p>
+                <p>Correo 1: {{ cliente.email_1 }}</p>
+                <p>Correo 2: {{ cliente.email_2 }}</p>
+                <p>Numero de telefono: {{ cliente.numero_telefono }}</p>
+                <p>Numero local: {{ cliente.numero_local }}</p>
             </div>
         </div>
     </div>
